# kinectProject

./: .gitignore  CMakeLists.txt  README
cmake/modules/: FindGFlags.cmake  FindGlog.cmake  FindOpenNI.cmake  Findlibfreenect.cmake  Findlibusb-1.0.cmake
playground/: Makefile  playground.cc
src/: CMakeLists.txt
src/camera/: AbstractRGBDepthCamera.hpp  KinectAdapter.cpp  KinectAdapter.hpp  RGBDepthFrame.hpp  abstract_rgb_depth_camera.h  background_filter.cc  background_filter.h  camera_perspective.cc  camera_perspective.h  constants.h  fake_kinect.cc  fake_kinect.h  file_source.cc  file_source.h  file_writer.cc  file_writer.h  image.h  image_bayer_grbg.cc  image_bayer_grbg.h  image_corrector.cc  image_corrector.h  image_source.h  kinect_device.cc  kinect_device.h  kinect_factory.cc  kinect_factory.h  kinect_recorder.cc  kinect_recorder.h  kinect_source.cc  kinect_source.h  openni_kinect_source.cc  openni_kinect_source.h  rgb_depth_frame.h
src/cmake/modules/: Findlibfreenect.cmake
src/examples/: kinect_view.cc
src/mesh/: mesh_viewer.cc  mesh_viewer.h  point_cloud.cc  point_cloud.h
src/orientation_detector/: orientation_detector.cc  orientation_detector.h
src/util/: Mutex.cpp  Mutex.hpp  filter_operation.h  matrix_operation.h  mutex.cc  mutex.h
